--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "formik": "^0.11.11",
     "history": "^4.7.2",
     "isomorphic-fetch": "^2.2.1",
     "react": "^16.2.0",
@@ -10,6 +11,7 @@
     "react-router-config": "^1.0.0-beta.4",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1",
+    "recompose": "^0.26.0",
     "styled-components": "^3.2.3"
   },
   "scripts": {
