--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
     "formik": "^0.11.11",
     "history": "^4.7.2",
     "isomorphic-fetch": "^2.2.1",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
+    "ramda": "^0.25.0",
+    "react": "16.3.0-alpha.2",
+    "react-dom": "16.3.0-alpha.2",
     "react-router-config": "^1.0.0-beta.4",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1",
