--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "ramda": "^0.25.0",
     "react": "16.3.0-alpha.2",
     "react-dom": "16.3.0-alpha.2",
+    "react-motion": "^0.5.2",
     "react-router-config": "^1.0.0-beta.4",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1",
