--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "formik": "^0.11.11",
+    "final-form": "^4.4.0",
     "history": "^4.7.2",
     "isomorphic-fetch": "^2.2.1",
     "ramda": "^0.25.0",
     "react": "16.3.0-alpha.2",
     "react-dom": "16.3.0-alpha.2",
+    "react-final-form": "^3.1.5",
     "react-motion": "^0.5.2",
     "react-router-config": "^1.0.0-beta.4",
     "react-router-dom": "^4.2.2",
