--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "classnames": "^2.2.5",
     "final-form": "^4.4.0",
     "history": "^4.7.2",
     "isomorphic-fetch": "^2.2.1",
+    "polished": "^1.9.2",
     "ramda": "^0.25.0",
     "react": "16.3.0-alpha.2",
     "react-dom": "16.3.0-alpha.2",
@@ -15,7 +17,8 @@
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1",
     "recompose": "^0.26.0",
-    "styled-components": "^3.2.3"
+    "styled-components": "^3.2.3",
+    "yup": "^0.24.1"
   },
   "scripts": {
     "start": "react-scripts start",
